--- a/src/index.scss
+++ b/src/index.scss
@@ -1,39 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body.yellowUpApp {
+html,
+body {
+  border: none;
+  margin: 0px;
+  padding: 0%;
+  min-height: 100vh;
+  background: unset;
   overflow-x: hidden;
-  & *,
-  & {
-    --i-yellowUp-color: #63e2b7;
-    --i-yellowUp-bg-color: rgb(24, 24, 28);
-    --i-yellowUp-text-color: #fff;
-    --i-yellowUp-title: #fff;
+}
+:root {
+  --i-border-color: #e2e2e3;
+}
+* {
+  color: black !important;
+  &:hover {
+    color: black !important;
   }
-}
-*.JPRKIYWZ_f,#JPRKIYWZ,.brde {
-  display: none !important;
-}
-body.yellowUpApp.light-mode {
-  & *,
-  & {
-    --i-yellowUp-color: #18a058;
-    --i-yellowUp-bg-color: #fff;
-    --i-yellowUp-text-color: rgb(24, 24, 28);
-    --i-yellowUp-title: #fff;
-  }
-}
-body.yellowUpApp {
-  & .theme-change {
-    $size: 50px;
-    width: $size;
-    height: $size;
-    border-radius: 50%;
-    padding: 2px;
-    background-color: transparent;
-    border: 1px var(--i-yellowUp-color) solid;
-    color: var(--i-yellowUp-color);
-    position: fixed;
-    z-index: 90000;
+  &:active {
+    color: black !important;
   }
 }
